--- a/index.html
+++ b/index.html
@@ -26,12 +26,11 @@
 <body>
 	<main>
 		<div class="intro">Hello, I'm Igor!</div>
-		<div class="tagline">All-Star Dev | Code Fanatic | Linux Hacker | Bleh</div>
+		<div class="tagline">Find my work below</div>
 		<!-- Find your icons from here - https://fontawesome.com/icons?d=gallery&s=brands -->
 		<div class="icons-social">
 			<a target="_blank" href="https://github.com/IgorBerman"><i class="fab fa-github"></i></a>
 			<a target="_blank" href="https://twitter.com/IgorBerman"><i class="fab fa-twitter"></i></a>
-			<a target="_blank" href="https://dev.to/flexdinesh"><i class="fab fa-dev"></i></a>
 			<a target="_blank" href="https://stackoverflow.com/users/2473417/igor-berman"><i class="fab fa-stack-overflow"></i></a>
 			<a target="_blank" href="https://www.linkedin.com/in/igor-berman-b8829311"><i class="fab fa-linkedin"></i></a>
     </div>
