adding some links

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 <body>
 	<main>
 		<div class="intro">Hello, I'm Igor!</div>
-		<div class="tagline">Find my work below</div>
+		<div class="tagline">Big Data | Team Lead | Architect | DevOps</div>
 		<!-- Find your icons from here - https://fontawesome.com/icons?d=gallery&s=brands -->
 		<div class="icons-social">
 			<a target="_blank" href="https://github.com/IgorBerman"><i class="fab fa-github"></i></a>
